# firebase-admin-rust-auth

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
