[package]
name = "firebase-admin-rust-auth"
description = "Firebase Admin Rust Auth"
version = "0.0.5"
authors = ["Mehmet Oguz Derin <mehmetoguzderin@mehmetoguzderin.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mehmetoguzderin/firebase-admin-rust-auth"

[dependencies]
jsonwebtoken = "7.2.0"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
